--- a/project.config.json
+++ b/project.config.json
@@ -37,7 +37,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 1,
+			"current": 2,
 			"list": [
 				{
 					"id": -1,
@@ -48,7 +48,13 @@
 				{
 					"id": -1,
 					"name": "名片结果",
-					"pathName": "pages/card/card"
+					"pathName": "pages/card/card",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "集小善",
+					"pathName": "pages/welfare/welfare"
 				}
 			]
 		}
